# Docling-GUI

./: .gitignore  AUDIT.md  DoclingGUI.py  README.md  UI Improvements.md  config.py  conversion_utils.py  docling_gui.py  gui_panels.py  logging_setup.py  main.py  pyproject.toml  requirements.txt  tooltip.py
.claude/: settings.local.json
tests/: test_conversion_utils.py
