[project]
name = "docling-gui"
version = "0.1.0"
description = "A full-featured graphical interface for IBM Docling document conversion."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docling>=2.71.0",
    "tkinterdnd2>=0.4.3",
    "rapidocr-onnxruntime>=1.3.24",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear (likely bugs)
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade (modern syntax)
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line length handled by the formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]
